src/objects/Applied_Incentive_Offer__c.object
<CustomObject>
    <fields>
        <fullName>Astrum_Contract__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Astrum Contract</label>
        <referenceTo>Astrum_Contract__c</referenceTo>
        <relationshipLabel>Applied Incentive Offers</relationshipLabel>
        <relationshipName>Applied_Incentive_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Effective_Dollar_Amount__c</fullName>
        <label>Effective Dollar Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Eligible_Sector__c</fullName>
        <label>Eligible Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <formula>Incentive_Offer__r.End_Date__c</formula>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Date_of_First_Payment__c</fullName>
        <label>Estimated Date of First Payment</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Estimated_Days_to_Payment__c</fullName>
        <label>Estimated Days to Payment</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_Month__c</fullName>
        <label>Estimated Payment Month</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Estimated_Payment_Year_Offset__c</fullName>
        <label>Estimated Payment Year Offset</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Feed_In_Tariff_Earnings_After_Tax__c</fullName>
        <label>Feed In Tariff Earnings After Tax</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Flat_Rebate_Amount__c</fullName>
        <label>Flat Rebate Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Implementing_Sector__c</fullName>
        <label>Implementing Sector</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Incentive_Automatically_Applied__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Incentive Automatically Applied</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Incentive_Offer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Incentive Offer</label>
        <referenceTo>Incentive_Offer__c</referenceTo>
        <relationshipLabel>Applied Incentive Offers</relationshipLabel>
        <relationshipName>Applied_Incentive_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Incentive_Recipient__c</fullName>
        <label>Incentive Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PBI_Amount__c</fullName>
        <label>PBI Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SAC_Eligible__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SAC Eligible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Sales_Order__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sales Order</label>
        <referenceTo>SCRB_SalesOrder__c</referenceTo>
        <relationshipLabel>Applied Incentive Offers</relationshipLabel>
        <relationshipName>Applied_Incentive_Offers</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <formula>Incentive_Offer__r.Start_Date__c</formula>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>TSRF_Adjustment_Type__c</fullName>
        <label>TSRF Adjustment Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_Credit_Rate__c</fullName>
        <label>Tax Credit Rate</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Term_Months__c</fullName>
        <label>Term (Months)</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_1_Incentive_Rate__c</fullName>
        <label>Tier 1 Incentive Rate ($/W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_1_Maximum_System_Size_kW__c</fullName>
        <label>Tier 1 Maximum System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_2_Incentive_Rate__c</fullName>
        <label>Tier 2 Incentive Rate ($/W)</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tier_2_Maximum_System_Size_kW__c</fullName>
        <label>Tier 2 Maximum System Size (kW)</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Tier_Pricing_Type__c</fullName>
        <label>Tier Pricing Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Utility_Company_Matching_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Utility Company Matching Required</label>
        <type>Checkbox</type>
    </fields>
    <label>Applied Incentive Offer</label>
    <nameField>
        <label>Applied Incentive Offer Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Applied Incentive Offers</pluralLabel>
    <recordTypes>
        <fullName>Depreciation</fullName>
        <active>true</active>
        <label>Depreciation</label>
    </recordTypes>
    <recordTypes>
        <fullName>Feed_In_Tariff</fullName>
        <active>true</active>
        <label>Feed In Tariff</label>
    </recordTypes>
    <recordTypes>
        <fullName>PBI</fullName>
        <active>true</active>
        <label>PBI</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate_Dollar_Per_Watt</fullName>
        <active>true</active>
        <label>Rebate ($/W)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Rebate_Dollars</fullName>
        <active>true</active>
        <label>Rebate ($)</label>
    </recordTypes>
    <recordTypes>
        <fullName>Tax_Credit</fullName>
        <active>true</active>
        <label>Tax Credit</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>